--- a/index.html
+++ b/index.html
@@ -9,33 +9,50 @@
   <body>
     <header>
       <div class="header-content">
-        <h1 class="animate__animated animate__bounceInDown">
-          Explore Journalism with Mr. Arun
-        </h1>
-        <p class="animate__animated animate__fadeIn">
-          Welcome to a Journey of Insights
-        </p>
+        <h1>Homeopathic <span>Consultancy</span></h1>
+        <h3 class="animate__animated animate__bounceInDown">
+          Consult with Dr. Binod Tiwari
+        </h3>
+        <!-- <p class="animate__animated animate__fadeIn">
+          The Institute You can ‘TRUST’..!
+        </p> -->
       </div>
     </header>
+
     <section class="about">
       <div class="container">
         <div class="about-content">
           <div class="about-img animate__animated animate__fadeInLeft">
-            <img src="ab.jpg" alt="Mr. Arun" />
+            <img src="p1.jpg" alt="Mr. Arun" />
           </div>
           <div class="about-text animate__animated animate__fadeInRight">
-            <h2>About Mr. Arun</h2>
+            <h2>About Dr. Binod</h2>
+            <h5>
+              "Meet Dr. Binod Tiwari: A Beacon of Excellence in Education and
+              Healthcare!"
+            </h5>
             <p>
-              Mr. Arun, a seasoned journalist with decades of experience, is
-              here to share his wealth of knowledge with aspiring journalists
-              like you. With a career spanning various newsrooms, he brings
-              practical insights and invaluable lessons that can propel your
-              career in journalism to new heights.
+              With over two decades of dedicated teaching experience, Dr. Binod
+              Tiwari has not only shaped the minds of countless students but has
+              also emerged as a highly esteemed figure in the field of medicine.
+              His passion for imparting knowledge and nurturing young talents
+              has left an indelible mark on the academic landscape.
             </p>
             <p>
-              Join Mr. Arun on this transformative journey as he delves into the
-              intricacies of the field, offering guidance, tips, and real-world
-              examples that you won't find in textbooks.
+              Beyond his role as an educator, Dr. Tiwari's prowess as a
+              healthcare professional is unparalleled. Patient reviews
+              consistently praise his compassionate care, expertise, and
+              commitment to ensuring the well-being of those under his watch.
+              His empathetic approach and attention to detail have earned him
+              the trust and admiration of his patients and peers alike.
+            </p>
+            <p>
+              In a world where excellence is often sought but rarely found, Dr.
+              Binod Tiwari stands out as a shining example of what true
+              dedication and expertise can achieve. Whether in the classroom or
+              the clinic, his impact is felt far and wide, making him a beacon
+              of inspiration for aspiring professionals and a pillar of support
+              for those in need.
             </p>
           </div>
         </div>
@@ -43,59 +60,69 @@
     </section>
     <section class="course-details">
       <div class="container">
-        <h2 class="animate__animated animate__fadeIn">Course Details</h2>
+        <h2 class="animate__animated animate__fadeIn">Treatments</h2>
         <div class="course-topic animate__animated animate__fadeInUp">
           <div class="topic">
-            <img src="dd.svg" alt="News Reporting" />
-            <h3>Understanding News Reporting</h3>
+            <img src="asthma.jpg" alt="News Reporting" />
+            <h3>Asthma</h3>
             <p>
-              A comprehensive guide to news gathering, verification, and
-              reporting techniques.
+              Homeopathy is the safest way to treat Asthma, as there will be
+              zero side effects, resulting in an improved lifestyle and long
+              life.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+          <div class="topic">
+            <img src="psoriasis.jpg" alt="Interview Techniques" />
+            <h3>Psoriasis</h3>
+            <p>
+              Homeopathic medicines have shown promising results in Psoriasis.
+              the remedy will be based on your constitution and treat you well.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+          <div class="topic">
+            <img
+              src="Psychosomatic.jpg"
+              alt="Effective Writing for Journalism"
+            />
+            <h3>Psychosomatic Diseases</h3>
+            <p>
+              Homeopathy is the best way of therapy for Psychosomatic Disorders
+              as it aims at a holistic treatment of individuals.
             </p>
             <a href="#">Learn More</a>
           </div>
           <div class="topic">
-            <img src="bb.png" alt="Interview Techniques" />
-            <h3>Interview Techniques</h3>
+            <img
+              src="diabetes.jpg"
+              alt="Investigative Journalism Fundamentals"
+            />
+            <h3>Diabetes Mellitus</h3>
             <p>
-              Master the art of conducting effective interviews and eliciting
-              valuable insights from sources.
+              Homeopathic Remedies help patients with D.M. control blood sugar
+              levels when used along with regular Homeopathy Treatment for
+              Diabetes.
             </p>
-            <a href="#">Learn More</a>
+            <a href="#">Read More</a>
           </div>
           <div class="topic">
-            <img src="cc.png" alt="Effective Writing for Journalism" />
-            <h3>Effective Writing for Journalism</h3>
+            <img src="male.jpeg" alt="Media Ethics and Responsibility" />
+            <h3>Male Infertility</h3>
             <p>
-              Refine your writing skills to craft compelling and engaging
-              stories for various media platforms.
+              Homeopathy medicine works best in treating infertility in males by
+              dealing with root causes and treating them completely.
             </p>
-            <a href="#">Learn More</a>
-          </div>
-          <div class="topic">
-            <img src="dd.svg" alt="Investigative Journalism Fundamentals" />
-            <h3>Investigative Journalism Fundamentals</h3>
-            <p>
-              Learn the techniques and ethics of investigative journalism to
-              uncover hidden truths.
-            </p>
-            <a href="#">Learn More</a>
-          </div>
-          <div class="topic">
-            <img src="ee.svg" alt="Media Ethics and Responsibility" />
-            <h3>Media Ethics and Responsibility</h3>
-            <p>
-              Explore the ethical considerations and responsibilities of
-              journalism in the digital age.
-            </p>
-            <a href="#">Learn More</a>
+            <a href="#">Read More</a>
           </div>
         </div>
       </div>
     </section>
     <footer>
       <div class="container">
-        <p>&copy; 2024 Explore Journalism with Mr. Arun</p>
+        <p>
+          &copy;Copyright Dr.Binod 2024. All Right Reserved | design by Ayush
+        </p>
       </div>
     </footer>
   </body>
